--- a/Pumpkin/pumpkin.html
+++ b/Pumpkin/pumpkin.html
@@ -32,9 +32,19 @@
     </button>
 </div>
 <!--Follow tutorial for pumpkin and add code below this line -->
-
-
-
+<div class="container">
+  <div class="pumpkin">
+  <div class="texture">
+  <div class="root">
+  <div class="eye left">
+  <div class="eye right">
+  <div class="mouth left">
+ <div class="mouth right">
+ <div class="teeth"></div>
+</div>
+  
+<div class="shadow"></div>
+</div>
 
 
     
