--- a/ghost.html
+++ b/ghost.html
@@ -4,8 +4,8 @@
 <title>Page Title</title>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pumpkin</title>
-	<link rel="stylesheet" href="pumpkin.css" />
+    <title>Bat</title>
+	<link rel="stylesheet" href="ghost.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,35 +18,50 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Eater&family=Rubik+Beastly&display=swap" rel="stylesheet">
   </head>
-  <body>
-<p> Pumpkin</p>
+  <body class="ghost">
+<p> Ghost</p>
 <div class="choose">
  <button>
-        <a href="/Spider/spider.html">Spider</a>
+        <a href="spider.html">Spider</a>
     </button>
       <button>
-        <a href="/Pumpkin/pumpkin.html">Pumpkin</a>
+        <a href="pumpkin.html">Pumpkin</a>
     </button>
       <button>
-        <a href="/Ghost/ghost.html">Ghost</a>
+        <a href="ghost.html">Ghost</a>
     </button>
 </div>
-<!--Follow tutorial for pumpkin and add code below this line -->
-<div class="container">
-  <div class="pumpkin">
-  <div class="texture">
-  <div class="root">
-  <div class="eye left">
-  <div class="eye right">
-  <div class="mouth left">
- <div class="mouth right">
- <div class="teeth"></div>
-</div>
-  
-<div class="shadow"></div>
-</div>
 
+<!--Follow tutorial for ghost and add code below this line -->
+<!DOCTYPE html>
+<html lang="en">
 
-    
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Spooky Ghost</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <div id="container">
+        <div id="spooky">
+            <div id="body">
+                <div id="eyes"></div>
+                <div id="mouth"></div>
+                <div id="feet">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        <div id="shadow"></div>
+    </div>
+
+</body>
+
 </html>
