--- a/pumpkin.html
+++ b/pumpkin.html
@@ -32,21 +32,35 @@
     </button>
 </div>
 <!--Follow tutorial for pumpkin and add code below this line -->
-<div class="container">
-  <div class="pumpkin">
-  <div class="texture">
-  <div class="root">
-  <div class="eye left">
-  <div class="eye right">
-  <div class="mouth left">
- <div class="mouth right">
- <div class="teeth"></div>
-</div>
-  
-<div class="shadow"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    
-  </body>
+    <title>Pumpkin</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="pumpkin">
+            <div class="texture"></div>
+            <div class="root"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="mouth left"></div>
+            <div class="mouth right"></div>
+            <div class="teeth"></div>
+        </div>
+
+        <div class="shadow"></div>
+    </div>
+
+</body>
+
 </html>
